--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
+    "gl-react-native": "^1.2.6",
     "react-native": "^0.13.1"
   }
 }
